# The-Last-One-Standing

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Makefile  README.md  cmake_install.cmake  vcpkg.json
Project/: CMakeLists.txt  Makefile  camera.h  cmake_install.cmake  cubemap.h  epanadiplose_main  main.cpp  object.h  project_main  shader.h  vertSrc.txt
Project/objects/: moon.dae  moon.mtl  sun.mtl  tron light cycle 1.mtl  tron.mtl  tron_moto_center.mtl
Project/objects/airplane/: airplane.mtl
Project/objects/earth/: earth.mtl
Project/objects/floor/: cactus.mtl  floor.mtl
Project/objects/tank/: ball.mtl  boss.mtl  enemy.mtl  ground.mtl  heliport.mtl  platform.dae  tank.mtl
Project/shaders/: halo.frag
Project/shaders/ambiant_light/: ambiant.frag  ambiant.vert
Project/shaders/animation/: animation.vert
Project/shaders/backpack/: shader.frag  shader.vert
Project/shaders/common/: shader.frag
Project/shaders/commonObjects/: commonObjects.frag  commonObjects.vert
Project/shaders/debug/: debug.frag  debug.vert
Project/shaders/depthMap/: depthMap.vert
Project/shaders/floor/: floor.frag  floor.vert
Project/shaders/particles/: part.frag  part.vert
Project/shaders/physicalObjects/: physicalObjects.frag  physicalObjects.vert
Project/shaders/reflectiveObjects/: reflectiveObjects.frag  reflectiveObjects.vert
Project/shaders/refractiveObjects/: refractiveObjects.frag  refractiveObjects.vert
Project/shaders/skybox/: skybox.frag  skybox.vert
Project/shaders/specularObjects/: specularObjects.frag  specularObjects.vert
Project/sources/: Animation.h  Animator.h  Application.hpp  AssimpGLMHelpers.h  Bone.h  Camera.h  CubeMap.h  LightSource.h  Line.hpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Motorbike.h  Object.h  ParticleSource.h  PhysicModel.cpp  PhysicModel.h  PhysicsEngine.hpp  Shader.h  Sphere.h  TankModel.cpp  TankModel.hpp  Texture.h  debugObject.hpp  main.cpp  main2.cpp
